# rust-juniper-playground

./: .env.sample  .gitignore  Cargo.toml  README.md  docker-compose.yml
.github/actions/setup_rust/: action.yml
.github/workflows/: ci.yml
docker/graphql/: Dockerfile
docker/graphql_prod/: Dockerfile
migrations/: 20220116055329_init.down.sql  20220116055329_init.up.sql
src/: context.rs  data_sources.rs  lib.rs  main.rs  objects.rs  queries.rs  schema.rs
src/data_sources/: entities.rs  mod.rs  post.rs  user.rs
src/data_sources/entities/: errors.rs  mod.rs  post.rs  user.rs
src/resolvers/: errors.rs  mod.rs  mutations.rs  queries.rs
src/resolvers/objects/: errors.rs  mod.rs  post.rs  user.rs
tests/: graphql_test.rs  index_test.rs
tests/graphql/: mod.rs
tests/graphql/mutations/user/: test.rs
tests/graphql/mutations/user/snapshots/: root__graphql__mutations__user__test__ユーザを追加することができること-2.snap  root__graphql__mutations__user__test__ユーザを追加することができること.snap  root__graphql__mutations__user__test__空のユーザ名の場合はバリデーションエラーをレスポンスすること.snap
tests/graphql/queries/user/: test.rs
tests/graphql/queries/user/snapshots/: root__graphql__queries__user__test__すべてのユーザの一覧をレスポンスすること.snap  root__graphql__queries__user__test__ユーザと紐づく投稿をレスポンスすること.snap
tests/graphql/snapshots/: root__graphql__user_test__すべてのユーザの一覧をレスポンスすること.snap.new  root__graphql__user_test__ユーザと紐づく投稿をレスポンスすること.snap.new
tests/graphql_tests/: user_test.rs
tests/graphql_tests/snapshots/: graphql_test__graphql_tests__user_test__すべてのユーザの一覧をレスポンスすること.snap  graphql_test__graphql_tests__user_test__ユーザと紐づく投稿をレスポンスすること.snap
tests/test_utils/: mod.rs
