[package]
name = "rust-juniper-playground"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.0-beta.8"
actix-rt = "2"
juniper = { git = "https://github.com/graphql-rust/juniper.git", rev="c866e09" }
juniper_actix = { git = "https://github.com/graphql-rust/juniper.git", rev="c866e09" }
dataloader = "0.14.0"
async-trait = "0.1.52"
sea-orm = { version = "0.5.0", features = [ "sqlx-mysql", "runtime-actix-native-tls", "macros", "debug-print" ], default-features = false }
dotenv = "0.15.0"
chrono = "0.4.19"
tracing = "0.1.29"
tracing-subscriber = "0.3.5"
