[package]
name = "rust-juniper-playground"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.0-beta.8"
actix-rt = "2"
juniper = { git = "https://github.com/graphql-rust/juniper.git", rev="c866e09" }
juniper_actix = { git = "https://github.com/graphql-rust/juniper.git", rev="c866e09" }
dataloader = "0.14.0"
async-trait = "0.1.52"
sea-orm = { version = "0.5.0", features = [ "sqlx-mysql", "runtime-actix-native-tls", "macros", "debug-print" ], default-features = false }
dotenv = "0.15.0"
chrono = "0.4.19"
tracing = "0.1.29"
tracing-subscriber = "0.3.5"
mockall_double = "0.2.1"

[dev-dependencies]
serde_json = "1.0.75"
thread-id = "4.0.0"
sqlx-core = { version = "0.5.10" } # テスト時のマイグレーションで使う
insta = { version = "1.10.0", features = ["backtrace"] }
test-context = "0.1.3"
futures = "0.3.19"
actix-http = "3.0.0-beta.18" # Requestオブジェクトの型定義のために使用
mockall = "0.11.0"
